# To-Do-App

./: .gitignore  CMakeLists.txt  Linux.sh  README.md  Run.sh  compile_commands.json
Resources/: tasks.txt
include/: Console.h  config.h
src/: Console.cpp  main.cpp
